Added fs module to read local files.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "~3.0.0rc4",
     "nconf": "~0.6.4",
     "winston": "~0.6.2",
-    "scraper": "0.0.9"
+    "scraper": "0.0.9",
+    "fs": "0.0.0"
   },
   "devDependencies": {}
 }
