--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "nconf": "~0.6.4",
     "winston": "~0.6.2",
     "scraper": "0.0.9",
-    "fs": "0.0.0"
+    "fs": "0.0.0",
+    "restler": "~2.0.1"
   },
   "devDependencies": {}
 }
