--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "restler": "~2.0.1",
     "xml2js": "~0.2.0",
     "feedparser": "~0.10.0-beta",
-    "mongoose": "~3.3.1"
+    "mongoose": "~3.3.1",
+    "cluster": "~0.7.7"
   },
   "devDependencies": {}
 }
